# cpp-project-template

./: README.md  setup.sh
resource/: CMakeLists.txt  gitignore
resource/cmake/: FindCatch2.cmake
resource/script/: do
resource/test/: CMakeLists.txt
script/: cpp-project-template
src/script/: cpp-project-template.sh
